# alfred-processing

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  dev.sh  docker-compose.remote-ollama.yml  docker-compose.selfhosted.yml  docker-compose.yml  pyproject.toml  test_llm.py
.github/: dependabot.yml
.github/workflows/: ci.yml
alfred/: config.py  llm_client.py  main.py  orchestrator.py
alfred/agents/: backstories.py  condenser.py  crew.py  definitions.py  frappe_knowledge.py  plan_crew.py  prompt_enhancer.py  reflection.py  token_tracker.py  tool_stubs.py
alfred/agents/builders/: automation_builder.py  doctype_builder.py  presentation_builder.py  report_builder.py  reports_builder.py  schema_builder.py
alfred/agents/specialists/: module_specialist.py
alfred/api/: admin_client.py  errors.py  lifecycle.py  pipeline.py  rest_runner.py  routes.py  websocket.py
alfred/api/pipeline/: __init__.py  _phases_build.py  _phases_dev.py  _phases_orchestrate.py  _phases_setup.py  context.py  extractors.py  runner.py
alfred/api/safety_nets/: __init__.py  backfill.py  drift.py  empty_changeset.py  module_validation.py  report_handoff.py  rescue.py
alfred/api/websocket/: __init__.py  connection.py  extract.py  pipeline_stages.py
alfred/defense/: sanitizer.py
alfred/handlers/: __init__.py  chat.py  insights.py  insights_candidate.py  plan.py
alfred/handlers/post_build/: backfill_defaults.py
alfred/knowledge/: __init__.py  fkb.py
alfred/middleware/: auth.py  error_handling.py  rate_limit.py
alfred/models/: agent_outputs.py  insights_result.py  messages.py  plan_doc.py
alfred/obs/: __init__.py  log_redaction.py  logging_setup.py  metrics.py  tasks.py  tracer.py
alfred/orchestrator/: __init__.py  intent.py  mode.py  module.py
alfred/registry/: README.md  loader.py  module_loader.py
alfred/registry/intents/: _meta_schema.json  create_assignment_rule.json  create_auto_email_report.json  create_auto_repeat.json  create_client_script.json  create_custom_field.json  create_dashboard.json  create_dashboard_chart.json  create_doctype.json  create_email_template.json  create_letter_head.json  create_notification.json  create_number_card.json  create_print_format.json  create_property_setter.json  create_report.json  create_role_with_permissions.json  create_server_script.json  create_user_permission.json  create_web_form.json  create_webhook.json  create_workflow.json  update_print_settings.json
alfred/registry/modules/: _meta_schema.json  accounts.json  assets.json  buying.json  crm.json  custom.json  hr.json  maintenance.json  manufacturing.json  payroll.json  projects.json  selling.json  stock.json  support.json
alfred/registry/modules/_families/: _meta_schema.json  engagement.json  operations.json  people.json  transactions.json
alfred/security/: __init__.py  sql_safety.py  url_allowlist.py
alfred/state/: conversation_memory.py  store.py
alfred/tools/: code_validation.py  mcp_client.py  mcp_tools.py  permission_checks.py  user_interaction.py
benchmarks/: baseline_2026-04-13.json  baseline_clean_2026-04-13.json  phase1_2026-04-13.json  phase2_2026-04-13.json  smoketest2_2026-04-13.json  smoketest_2026-04-13.json
docs/: observability.md  pending-tasks.md  tech-debt-backlog.md
docs/plans/: 2026-04-21-doctype-builder-specialist.md  2026-04-22-insights-to-report-handoff.md  2026-04-22-module-specialists.md  2026-04-22-multi-module-classification.md
docs/specs/: 2026-04-21-doctype-builder-specialist.md  2026-04-22-insights-to-report-handoff.md  2026-04-22-module-specialists.md  2026-04-22-multi-module-classification.md
intern/: config.py  main.py
intern/agents/: crew.py  definitions.py  frappe_constants.py
intern/api/: routes.py  websocket.py
intern/defense/: sanitizer.py
intern/middleware/: auth.py  error_handling.py
intern/models/: agent_outputs.py  messages.py
intern/state/: store.py
intern/tools/: code_validation.py  mcp_tools.py  permission_checks.py  user_interaction.py
scripts/: benchmark_pipeline.py  check_env_example.py  compare_benchmarks.py  rotate_api_secret_key.py
tests/: conftest.py  test_admin_client.py  test_agents.py  test_api_gateway.py  test_api_secret_key_validator.py  test_automation_builder.py  test_backfill_defaults.py  test_backfill_defaults_raw.py  test_backfill_module_defaults.py  test_backfill_multi_module.py  test_cancel.py  test_changeset_field_defaults_meta.py  test_chat_handler.py  test_clarifier_late_response.py  test_classify_intent.py  test_classify_mode_fast_path.py  test_conversation_memory.py  test_cors_config.py  test_crew.py  test_crew_specialist_dispatch.py  test_current_agent_no_clobber.py  test_detect_drift_valid_json.py  test_detect_module.py  test_detect_modules.py  test_doctype_builder.py  test_dry_run_status.py  test_env_example_check.py  test_error_envelope_user_message.py  test_error_response.py  test_family_registry.py  test_handoff_condenser.py  test_insights_crew.py  test_insights_handler.py  test_insights_handler_structured.py  test_insights_result.py  test_jwt_iss_aud.py  test_jwt_signing_key.py  test_kb_lookup_by_id_wiring.py  test_lifecycle_tracking.py  test_lite_crew.py  (+58 more)
tools/: fkb_benchmark.py
