[project]
name = "alfred-processing"
version = "0.1.0"
description = "AI agent orchestration service for Frappe customizations"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
	{ name = "Venkatesh" },
]

dependencies = [
	"fastapi>=0.100,<1.0",
	"uvicorn[standard]>=0.20,<1.0",
	"websockets>=12.0,<14.0",
	# Pinned exactly because CrewAI's API surface churns fast (0.80 -> 0.203
	# in our original window) and our crew-builder + rescue paths sit on
	# specific internals (Task.callback shape, crew.tasks iteration, the
	# retry/drift quirks we handle in agents/reflection.py and api/websocket
	# _rescue_regenerate_changeset). Bump deliberately: update this version,
	# run the full pytest suite + bench tests, confirm no drift/rescue
	# regression, then commit.
	"crewai==0.203.2",
	"litellm>=1.40,<2.0",
	"redis[hiredis]>=5.0,<6.0",
	"pydantic>=2.0,<3.0",
	"pydantic-settings>=2.0,<3.0",
	"pyjwt>=2.8,<3.0",
	"prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-asyncio>=0.23",
	"httpx>=0.25",
	"ruff>=0.4",
	"jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alfred"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
# W191 (tab-indentation) + E101 (mixed-spaces-and-tabs) would fire on
# every line - the project's format config is indent-style="tab", but
# pycodestyle's default rules still flag tabs. Mirror Frappe's own
# ignore set here so ruff check agrees with ruff format.
#
# E501 (line-too-long) is relaxed because line-length=110 is already
# generous; the remaining violations are mostly long log-message
# format strings we don't want to word-wrap.
#
# E402 (module-level-import-not-at-top-of-file) fires on deliberate
# deferred imports inside functions + the CrewAI telemetry opt-out
# block in alfred/main.py that MUST run before crewai imports.
#
# B904 (raise-without-from-inside-except) flags 9 sites where we
# re-raise a friendlier error. Adding `from e` everywhere is a
# cosmetic change touching many files; do in a dedicated cleanup.
#
# UP042 (replace-str-enum) flags StrEnum subclasses; we keep them
# for backward compat with older Pydantic versions + external consumers.
#
# F821 fires on forward-ref strings inside TYPE_CHECKING-only imports
# ("StateStore | None" etc.) - valid at runtime, ruff can't see it.
#
# B007 + B008 + B017 + B905 + E701 + E741 + UP035 are one-off style
# preferences too small to fix this session; revisit as code gets
# touched in follow-ups.
ignore = [
	"W191", "E101", "E501",
	"E402", "B904", "UP042", "F821",
	"B007", "B008", "B017", "B905", "E701", "E741", "UP035", "F541",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
